--- a/sample-angular-app/src/app/app.component.html
+++ b/sample-angular-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1 i18n="User welcome|An introduction header for this sample@@introductionHeader">
   Hello i18n!
 </h1>
+<span>Hello here that is a try of the ngx-translate</span>
 
 <ng-container i18n>I don't output any element</ng-container>
 
