fixed: rel path

--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -6,6 +6,8 @@
     <button class="lang-button" (click)="setLanguage(l)" >{{l|uppercase }} <img [src]="getLanguageIconPath(l)"  class="lang-icon"></button> 
   </span>
 </div>
+<hr>
+{{relpath}}
   <hr>
 
 
