Testing click button lang and validate title change

--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div fxLayout="row"  fxLayoutAlign="end center" fxLayoutGap="gappx">
-  
+
   <div>{{'WELCOME'| translate:{name:username} }} </div>
 
 
   <span *ngFor="let l of langSupported"   >
-    <button class="lang-button" (click)="setLanguage(l)" >{{l|uppercase }} <img [src]="getLanguageIconPath(l)"  class="lang-icon"></button> 
+    <button class="lang-button" (click)="setLanguage(l)" [id]="l" >{{l|uppercase }} <img [src]="getLanguageIconPath(l)"  class="lang-icon"></button> 
   </span>
 </div>
   <hr>
