added test for validating TRANSLATIONS

--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -12,7 +12,7 @@
 
   <hr>
 <button id="doSomething" (click)="doSomething()">Do Something</button> Value : 
-<span>{{doResult | async}}</span>
+<span>{{doResult }}</span>
 <hr>
 
 <span>{{'HOME.HELLO' | translate}}</span>
