feature: Getting Icons from Web rather than copying all SVGs

--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -11,7 +11,7 @@
 </div>
 
   <hr>
-<button id="doSomething" (click)="doSomething()">Do Something</button> Value : 
+<button id="doSomething" (click)="doSomething()">{{'TEST.DOSOMETHING' | translate}} </button> Value : 
 <span>{{doResult }}</span>
 <hr>
 
