--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--@Featuring The content below is only a placeholder and can be replaced.-->
 
 <div fxLayout="row"  fxLayoutAlign="end center" fxLayoutGap="gappx">
 
