added lang and my own lib ngxtr

--- a/ngapp/src/app/app.component.html
+++ b/ngapp/src/app/app.component.html
@@ -9,7 +9,26 @@
 
 <div>{{'WELCOME'| translate:{name:username} }} </div>
 
+<h3> {{ 'HOME.GREETING' | translate }}</h3>
 
+<hr>
+
+<h2> {{ 'ABOUT.TRANSLATIONTITLE' | translate }}</h2>
+<p>{{ 'ABOUT.TRANSLATION' | translate }}</p>
+
+
+
+
+
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <span>{{'HOME.HELLO' | translate}}</span>
 
